# PlayFuel

./: .env  .gitignore  ARCHITECTURE.md  README.md  justfile
apps/api/: .env  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
apps/api/src/playfuel_api/: __init__.py  auth.py  db.py  main.py  settings.py
apps/api/src/playfuel_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/playfuel_api/eval/: __init__.py  run_acceptance.py
apps/api/src/playfuel_api/models/: __init__.py  api.py  db.py  enums.py
apps/api/src/playfuel_api/routes/: __init__.py  feedback.py  health.py  match_evaluations.py  matches.py  plans.py  player_profiles.py  players.py  tournaments.py
apps/api/src/playfuel_api/rules/: __init__.py  buckets.py  chain_lookup.py  chain_menus.json  constants.py  distance.py  duration_format.py  feedback.py  food.py  hard_coded_strings.py  next_action.py  plan.py  scenarios.py  weather.py
apps/api/src/playfuel_api/services/: __init__.py  llm.py  llm_safety.py  places.py  post_match_sync.py  scouting.py
apps/api/src/playfuel_api/tests/: conftest.py  test_anthropic_provider.py  test_auth_jwks.py  test_auth_negatives.py  test_buckets.py  test_chain_menu_lookup.py  test_constants.py  test_delete_matches_tournaments.py  test_distance.py  test_doubles_constants.py  test_doubles_llm.py  test_doubles_routes.py  test_doubles_scenarios.py  test_doubles_timeline.py  test_draw_size_and_round.py  test_duration_format.py  test_emergency_number.py  test_feedback_routes.py  test_food_assembly.py  test_food_categorize.py  (+45 more)
(+508 files in other folders)
